# ede-compdb

./: .gitignore  .travis.yml  Cask  Makefile  Vagrantfile  ede-compdb-test.el  ede-compdb.el  manifest.pp  playbook.yml  readme.org
puppet/manifests/: testenv.pp
test/: CMakeLists.txt  Makefile  build_type.cpp.in  ede-compdb-test.el  hello.cpp  test-helper.el  world.cpp
test/proj/: .dir_locals.el  CMakeLists.txt  config.hpp
test/proj/world/: world.hpp  world.ipp
test/utility/: utility.hpp
test/world/: world.cpp  world.hpp
